--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -369,6 +369,9 @@
     .finale {
         width: 100%;
     }
+    .ul-1{
+        width: 18rem ;
+    }
     ul {
         li {
             i {
@@ -379,7 +382,7 @@
                 font-size: 2rem;
             }
             &.youtube {
-                margin-right: 20%;
+                // margin-right: 20%;
             }
         }
     }
